remove swagger error annotation
